<resources>
    <string name="app_name">YourFreeTime</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main_activity2">MainActivity2Activity</string>
    <string name="icon">Иконка</string>
    <string name="title_activity_main_activity3">MainActivity3Activity</string>
    <string name="icon1">Иконка1</string>
    <string name="clock">Циферблат</string>
    <string name="icon3">Иконка2</string>
    <string name="YOURFREETIME">Your FreeTime</string>
    <string name="AndroidApplication">Android Application</string>
    <string name="bottom">НизЗаставки</string>
    <string name="student">Студент</string>
    <string name="worker">Рабочий</string>
    <string name="pensioner">Пенсионер</string>
    <string name="gym">gym</string>
    <string name="books">gym</string>
    <string name="fun">fun</string>
    <string name="book1">book1</string>
    <string name="pensioner1">pensioner</string>
    <string name="circles2of3">cirkles</string>
    <string name="student1">studentlayer</string>
    <string name="worker1">workerlayer</string>
    <string name="circles2">cirkles</string>
    <string name="сircles">circles1of3</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_student">StudentActivity</string>
    <string name="title_activity_worker">WorkerActivity</string>
    <string name="title_activity_pensioner">PensionerActivity</string>
    <string name="title_activity_third">ThirdActivity</string>
    <string name="title_activity_central">CentralActivity</string>
    <string name="title_activity_statistic">StatisticActivity</string>
    <string name="title_activity_add">AddActivity</string>
    <string name="title_activity_advice">AdviceActivity</string>
    <string name="title_activity_rating">Rating</string>
    <string name="title_activity_information">InformationActivity</string>
    <string name="title_activity_category">CategoryActivity</string>
    <string name="title_activity_statistic2">Statistic2</string>
    <string name="title_activity_active_deals">ActiveDealsActivity</string>
    <string name="title_activity_statistic_category">StatisticCategoryActivity</string>

</resources>
