<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#71d0ff"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.andrey.yourfreetime.activities.MainActivity3"
    android:onClick="Click1"
    android:nestedScrollingEnabled="true"
    android:clickable="false">

    <ImageView
        android:id="@+id/icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="6dp"
        android:contentDescription="@string/icon"
        android:src="@drawable/icon" />

    <ImageView
        android:id="@+id/icon1"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_gravity="center"
        android:adjustViewBounds="false"
        android:alpha="0.8"
        android:contentDescription="@string/icon1"

        android:src="@drawable/icon1" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/icon"
        android:layout_alignStart="@+id/icon"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:text="YOUR FREETIME"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#ffffffff"
        android:textSize="25sp"
        />

    <ImageView
        android:id="@+id/clock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/icon1"
        android:layout_centerVertical="true"
        android:layout_gravity="center"
        android:contentDescription="@string/clock"
        android:src="@drawable/clock" />

    <ImageView
        android:id="@+id/icon3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/icon"
        android:layout_alignRight="@+id/icon"
        android:layout_below="@+id/icon"
        android:layout_marginTop="3dp"
        android:contentDescription="@string/icon3"
        android:src="@drawable/icon3" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/icon3"
        android:layout_alignEnd="@+id/icon3"
        android:layout_alignLeft="@+id/icon3"
        android:layout_alignRight="@+id/icon3"
        android:layout_alignStart="@+id/icon3"
        android:layout_alignTop="@+id/icon3"
        android:gravity="center"
        android:text="@string/AndroidApplication"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#ffffffff"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Продолжить"
        android:id="@+id/textView11"
        android:gravity="center"
        android:textSize="30dp"
        android:layout_below="@+id/icon3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        />


</RelativeLayout>
