<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ff461a71"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.andrey.yourfreetime.activities.MainActivity2">

    <ImageView
        android:id="@+id/circles"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"

        android:contentDescription="@string/сircles"
        android:src="@drawable/circles"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v4.view.ViewPager
            android:id="@+id/pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"></android.support.v4.view.ViewPager>

        <ImageView
            android:id="@+id/student"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/student"
            android:onClick="clickstudent"
            android:src="@drawable/student"

            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <ImageView
            android:id="@+id/choosing1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/choosing1"
            android:layout_marginBottom="35dp"
            android:layout_above="@+id/student"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <ImageView
            android:id="@+id/worker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/worker"
            android:onClick="clickworker"
            android:src="@drawable/worker"
            android:layout_alignTop="@+id/pensioner"
            android:layout_centerHorizontal="true" />

        <ImageView
            android:id="@+id/pensioner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/pensioner"
            android:nestedScrollingEnabled="false"
            android:onClick="clickpensioner"
            android:src="@drawable/pensioner"
            android:layout_alignTop="@+id/student"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />



    </RelativeLayout>

</FrameLayout>